--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>@ealexandrohin</title>
 </head>
 <body>
-    <div class="background">
-        <a href="https://ealexandrohin.github.io" class="text">@ealexandrohin</div>
+    <div class="gradient">
+        <a class="at" href="https://linktr.ee/ealexandrohin">@ealexandrohin</div>
+    </div>
+    <div class="black">
+        <a class="tickly" href="https://github.com/eAlexandrohin/tickly">
+            <img class="logo" src="https://raw.githubusercontent.com/eAlexandrohin/tickly/main/.github/logoLong.svg">
+            <img class="preview" src="https://raw.githubusercontent.com/eAlexandrohin/tickly/main/.github/img/preview.png">
+        </a>
     </div>
 </body>
 </html>
