--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="gradient">
-        <a class="at" href="https://linktr.ee/ealexandrohin">@ealexandrohin</div>
+        <a class="at" href="https://linktr.ee/ealexandrohin">@ealexandrohin</a>
     </div>
     <div class="black">
         <a class="tickly" href="https://github.com/eAlexandrohin/tickly">
